--- a/yardHoppers-backend/package.json
+++ b/yardHoppers-backend/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1"
   }
 }
