--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "pg": "^8.11.0",
+    "supertest": "^6.3.3",
     "uuid": "^9.0.0"
   }
 }
